--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -8,6 +8,11 @@ spring:
   cloud:
     config:
       override-none: true
+  rabbitmq:
+    host: 192.168.73.129
+    port: 5672
+    username: guest
+    password: guest
     
 server:
   port: 8101
