--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: item-service
+  rabbitmq:
+    host: 192.168.73.129
+    port: 5672
+    username: guest
+    password: guest
     
 #server:
 #  port: 8001
